manifest/objects/rh2__Rollup_Helper_Record_Scope__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting will override the default record scope for the specified Source object.</description>
    <fields>
        <fullName>rh2__Encountered_Error_During_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encountered Error During Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Ignore_Query_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to ignore query errors when calculating lookup skew.</description>
        <label>Ignore Query Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Object_Full_Name__c</fullName>
        <inlineHelpText>If the full object name does not fit in the &quot;name&quot; field, please put the full name of the object here (in all lower case)</inlineHelpText>
        <label>Full Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Rollup Helper will not automatically update the record scope value for this object.</description>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Query_Error_Encountered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query Error During Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Record_Scope__c</fullName>
        <description>The maximum number of records of this object that Rollup Helper will process in a single asynchronous request.</description>
        <label>Record Scope</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Rollups_Per_Async__c</fullName>
        <description>The maximum number of rollups processed per asynchronous job. Lowering this setting can greatly reduce the number of query rows consumed per job, but may greatly increase the number of queue items needed to process all rollups.</description>
        <label>Rollups Per Asynchronous Request</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rollup Helper Record Scope Settings</label>
</CustomObject>